# dialogue-guardian

./: .codecov.yml  .gitignore  .readthedocs.yaml  COMMIT_MESSAGE.md  CONTRIBUTING.md  README.md  SESSION_COMPLETION_SUMMARY.md  TESTING.md  WARP.md  WINDOWS_SETUP_GUIDE.md  WORKFLOW_OPTIMIZATION_SUMMARY.md  guardian-by-ffmpeg.py  guardian.py  pytest.ini  repository.md  requirements.txt  run_tests.py  sample.fcpxml  sample.srt  test_guardian.py
.github/: SETUP.md
.github/workflows/: ci.yml  docs.yml  manual-test.yml  publish.yml  quality.yml  release.yml  security.yml  test.yml
.kiro/specs/audio-censoring-effectiveness/: design.md  requirements.md  tasks.md
.kiro/specs/release-workflow-fix/: design.md  requirements.md  tasks.md
dialogue-guardian/: .bumpversion.cfg  .flake8  .gitignore  .safety-policy.yml  CHANGELOG.md  CODE_REFACTORING_SUMMARY.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  MIGRATION_SUMMARY.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  README.md  TESTING.md  TODO.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  sample_diagnostic_20251011_043503.json  sample_diagnostic_20251011_043504.json  sample_diagnostic_20251011_043505.json  sample_diagnostic_20251011_043506.json  sample_diagnostic_20251011_043516.json  sample_diagnostic_20251011_043519.json  sample_diagnostic_20251011_044121.json  sample_diagnostic_20251011_044122.json  sample_diagnostic_20251011_044123.json  sample_diagnostic_20251011_044136.json  sample_diagnostic_20251011_044138.json  sample_diagnostic_20251011_045526.json  sample_diagnostic_20251011_045528.json  sample_diagnostic_20251011_045533.json  sample_diagnostic_20251011_045537.json  sample_diagnostic_20251011_045547.json  sample_diagnostic_20251011_045552.json  sample_diagnostic_20251011_052321.json  sample_diagnostic_20251011_052323.json  sample_diagnostic_20251011_052328.json  sample_diagnostic_20251011_052332.json  (+8 more)
dialogue-guardian/docs/: API.md  changelog.rst  cli_usage.rst  conf.py  contributing.rst  github_actions_setup.md  index.rst  installation.rst  quickstart.rst  requirements.txt
dialogue-guardian/docs/api/: guardian.rst
dialogue-guardian/examples/: example_usage.py  migrate_old_usage.py
dialogue-guardian/legacy/: README.md  guardian.py  guardian_by_ffmpeg.py  run_tests.py  test_guardian.py  test_guardian_by_ffmpeg.py
dialogue-guardian/samples/: sample_with_srt.srt
dialogue-guardian/scripts/: build_docs.py  download_ffmpeg.py  update_conf_py.py
dialogue-guardian/src/guardian/: __init__.py  cli.py  core.py
dialogue-guardian/tests/: conftest.py  test_core_full_flag.py  test_end_to_end_workflow.py  test_guardian_cli.py  test_guardian_cli_extended.py  test_guardian_core.py  test_guardian_edge_cases.py  test_guardian_integration.py  test_guardian_pure_functions.py  test_integration_complete.py
docs/: COMMIT_SUMMARY.md  DOCUMENTATION_UPDATES_SUMMARY.md  FFMPEG_SETUP_SUMMARY.md  INTEGRATION_VALIDATION_SUMMARY.md  MIGRATION_SUMMARY.md  TESTING.md
