# SPDX-FileCopyrightText: 2025 Tony Snearly
# SPDX-License-Identifier: OSL-3.0
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialogue-guardian"
version = "1.1.5"
authors = [
    {name = "Tony Snearly"},
]
description = "Universal Media Censor - Automatically detect and censor profane language in video files"
readme = "README.md"
license = {text = "OSL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Filters",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["video", "audio", "censoring", "subtitles", "ffmpeg", "profanity", "media"]
dependencies = [
    "srt",
]

[project.urls]
Homepage = "https://github.com/tsnearly/dialogue-guardian"
Documentation = "https://tsnearly.github.io/dialogue-guardian/"
Repository = "https://github.com/tsnearly/dialogue-guardian.git"
Issues = "https://github.com/tsnearly/dialogue-guardian/issues"
Changelog = "https://tsnearly.github.io/dialogue-guardian/changelog.html"

[project.scripts]
guardian = "guardian.cli:main"
dialogue-guardian = "guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["guardian*"]

[tool.setuptools.package-data]
guardian = ["*.md", "*.txt"]