# SPDX-FileCopyrightText: 2025 Tony Snearly
# SPDX-License-Identifier: OSL-3.0
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialogue-guardian"
version = "1.3.1"
authors = [
    {name = "Tony Snearly", email = "tony.snearly@gmail.com" },
]
description = "Universal Media Censor - Automatically detect and censor profane language in video files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Open Software License 3.0 (OSL-3.0)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Filters",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Operating System :: OS Independent",
]
license = "OSL-3.0"
license-files = ["LICEN[CS]E*"]
keywords = ["video", "audio", "censoring", "subtitles", "ffmpeg", "profanity", "media"]
dependencies = [
    "srt",
]

[dependency-groups]
dev = [
    "requests",
    "py7zr",
    "black", # Code formatter
    "flake8", # Linter
    "isort", # Import sorter
    "mypy",
    "twine",
    "safety",
    "build",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "detect-secrets>=1.5.0",
]
test = [
    "pytest",     # Test runner
    "pytest-cov", # Code coverage
    "pytest-mock"
]

[project.urls]
Homepage = "https://github.com/tsnearly/dialogue-guardian"
Documentation = "https://dialogue-guardian.readthedocs.io/en/latest/"
Repository = "https://github.com/tsnearly/dialogue-guardian.git"
GitHub = "https://github.com/tsnearly/dialogue-guardian"
Issues = "https://github.com/tsnearly/dialogue-guardian/issues"
Changelog = "https://tsnearly.github.io/dialogue-guardian/changelog.html"

[project.scripts]
guardian = "guardian.cli:main"
dialogue-guardian = "guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["guardian*"]

[tool.setuptools.package-data]
guardian = ["*.md", "*.txt"]

[tool.pylint.messages_control]
disable = [
    "arguments-differ",
    "attribute-defined-outside-init",
    "bad-continuation",
    "blacklisted-name",
    "duplicate-code",
    "fixme",
    "import-error",
    "no-member",
    "no-name-in-module",
    "protected-access",
    "stop-iteration-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "abstract-method",
    "chained-comparison",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "global-statement",
    "missing-docstring",
    "redefined-argument-from-local",
    "redefined-outer-name",
    "reimported",
    "too-many-ancestors",
    "unexpected-special-method-signature",
]
